tests/cases/fail/list_object_append_type.p4
class Point:
    x: int
    y: int

points: list[Point] = []

def main() -> None:
    points.append(1)
